'添加了首页'

--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -17,7 +17,11 @@ a {
   text-decoration: none;
 }
 a:hover {
-  color: #005bb7;
+  color: #1186fd;
+}
+
+:root {
+  --sizecolor: #ebbc0e;
 }
 
 /*# sourceMappingURL=global.css.map */
