--- a/src/assets/css/var.scss
+++ b/src/assets/css/var.scss
@@ -3,7 +3,7 @@ $error:#f56c6c;// 危险、错误
 $warning: #dc6a12; //警告
 $info:#909399; //成功
 $themeBg:#60a4ff7f; //主题背景色
-$themeWord: #005bb7;//主题字体颜色
+$themeWord: #1186fd;//主题字体颜色
 $gray:#b4b8bc; // 灰色
 $dark:#202020; // 深色
 $words:#373737; // 大部分文字、深色文字
