--- a/src/assets/blog_font/iconfont.css
+++ b/src/assets/blog_font/iconfont.css
@@ -1,8 +1,8 @@
 @font-face {
   font-family: "iconfont"; /* Project id 2671680 */
-  src: url('iconfont.woff2?t=1626169576831') format('woff2'),
-       url('iconfont.woff?t=1626169576831') format('woff'),
-       url('iconfont.ttf?t=1626169576831') format('truetype');
+  src: url('iconfont.woff2?t=1626511519551') format('woff2'),
+       url('iconfont.woff?t=1626511519551') format('woff'),
+       url('iconfont.ttf?t=1626511519551') format('truetype');
 }
 
 .iconfont {
@@ -11,6 +11,10 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-hot:before {
+  content: "\e600";
 }
 
 .icon-warning:before {
