--- a/src/assets/css/var.scss
+++ b/src/assets/css/var.scss
@@ -8,3 +8,11 @@ $gray:#b4b8bc; // 灰色
 $dark:#202020; // 深色
 $words:#373737; // 大部分文字、深色文字
 $lightWords:#999; // 少部分文字、浅色文字
+
+
+@mixin ellipsis {
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+    display: inline-block;
+  }
