--- a/src/assets/css/page.css
+++ b/src/assets/css/page.css
@@ -1,6 +1,3 @@
-.contCard {
-  width: 625px;
-}
 .contCard .clearfix .hotArt {
   margin-right: 5px;
   font-size: 18px;
@@ -44,10 +41,11 @@
 .contCard .item .itemTitle {
   font-size: 18px;
   display: inline-block;
-  width: 470px;
+  width: calc(100% - 120px);
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
+  display: inline-block;
 }
 .contCard .item:nth-of-type(1) i {
   color: #f56c6c;
@@ -67,6 +65,60 @@
   display: flex;
   width: 100%;
   justify-content: space-between;
+  margin-bottom: 100px;
+}
+.pageFoot .footCont {
+  width: calc((100% - 110px) / 2 );
+  box-sizing: border-box;
+  background: #fff;
+}
+.pageFoot .footCont .clearfix {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.pageFoot .footCont .hasnew {
+  cursor: pointer;
+  margin-left: 20px;
+  font-size: 14px;
+}
+.pageFoot .footCont .hasnew .active {
+  color: #1186fd;
+}
+.pageFoot .footCont .itemtext {
+  margin-bottom: 20px;
+}
+.pageFoot .footCont .itemtext .itemTitle {
+  width: 100%;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  display: inline-block;
+  justify-content: flex-start;
+  font-size: 16px;
+}
+.pageFoot .footCont .itemtext .itembtn {
+  display: flex;
+  justify-content: space-between;
+  font-size: 13px;
+  margin: 5px 0px 0px;
+}
+.pageFoot .footCont .itemtext .itembtn .tags {
+  color: #999;
+  margin: 0px 10px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  display: inline-block;
+  width: 100px;
+}
+.pageFoot .footCont .itemtext .itembtn .icon-hot {
+  margin-right: 3px;
+  color: #fac32b;
+}
+.pageFoot .footCont .itemtext .itembtn .author,
+.pageFoot .footCont .itemtext .itembtn .createTime {
+  color: #999;
 }
 
 /*# sourceMappingURL=page.css.map */
