'新增了文章模块和分类'

--- a/src/assets/css/page.css
+++ b/src/assets/css/page.css
@@ -119,6 +119,7 @@
 .pageFoot .footCont .itemtext .itembtn .author,
 .pageFoot .footCont .itemtext .itembtn .createTime {
   color: #999;
+  text-align: right;
 }
 
 /*# sourceMappingURL=page.css.map */
