--- a/src/assets/css/page.scss
+++ b/src/assets/css/page.scss
@@ -121,7 +121,8 @@
         }
          .author,
          .createTime{
-          color:$lightWords
+          color:$lightWords;
+           text-align: right;
         }
        }
        
